🦄 refactor: recoil -> useReducer

--- a/src/view/flex-display/flex.mdx
+++ b/src/view/flex-display/flex.mdx
@@ -1,6 +1,5 @@
-import FlexContainerDemo from './flex-container'
 import Preview from './flex-preview'
-import FlexItem from './flex-item'
+import { FlexContainerDemo, FlexItemAttrDemo } from './flex'
 
 export default function Layout({ children }) {
   return (
@@ -19,4 +18,4 @@ export default function Layout({ children }) {
 
 ## Flex 项目属性
 
-<FlexItem />
+<FlexItemAttrDemo  />
