--- a/pages/three/camera.mdx
+++ b/pages/three/camera.mdx
@@ -1,5 +1,8 @@
 <CH.Scrollycoding preset="https://codesandbox.io/s/7wt1zq">
 # 摄像机
+
+实际上相机是一个概念的抽象，我们把三维空间内的场景变换到屏幕画布的这个三维投影的过程抽象成为相机。
+
 在 Three.js 中最常用的摄像机有：
 
 - 透视投影摄像机(PerspectiveCamera)
